# kimchi-gold

./: .gitignore  FILE_AND_VARIABLE_NAMING_GUIDE.md  README.md  REFACTORING_SUMMARY.md  index.html  pyproject.toml  search.json  styles.css
.github/workflows/: Daily_collect.yml  publish-website.yml  pytest.yml  security_scan.yml
.jules/: bolt.md  palette.md  sentinel.md
data/: kimchi_gold_price_log.csv
scripts/: analyze_outlier.py  collect_data.py  generate_chart.py
site_libs/bootstrap/: bootstrap-739e25169016adbefc401f78a969daae.min.css
src/kimchi_gold/: __init__.py  backtest.py  chart_generator.py  collect_price.py  config.py  configuration.py  data_collector.py  data_models.py  kimchi_signal.py  now_price.py  optimal_threshold.py  outlier_analyzer.py  plot.py  price_fetcher.py
tests/: test_collect_data.py  test_kimchi_signal.py  test_now_price.py  test_plot.py
website/: _quarto.yml  index.qmd
